--- a/modules/Sass_Tutorial/CSS/style.scss
+++ b/modules/Sass_Tutorial/CSS/style.scss
@@ -1,13 +1,12 @@
-$fonts: 'Poppins', Helvertica, sans-serif;
-$primary-color: #ab99ca;
-$spacing: 2rem;
+
+@import 'variables';
+@import 'mixins';
+@import 'card';
    
 body {
     font-family: $fonts;
     background-color: $primary-color;
     padding: $spacing;
     min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flex-center();
 }
