--- a/modules/Sass_Tutorial/CSS/_card.scss
+++ b/modules/Sass_Tutorial/CSS/_card.scss
@@ -5,24 +5,30 @@
     margin: 2rem;
     box-shadow: 5px 5px 5px 5px #000;
     @include border-radius(0.5rem);
+
     img{
         height: 15rem;
         background-size: cover;
-        background-position: center center;
+        background-position: center;
     }
+
     .card_content{
         padding: $spacing;
     }
+
     .card_title{
         margin: 0;
         color: black;
     }
+
     .card_description{
         margin: 0;
         color: $dark-grey;
     }
+
     &_dark{
         background-color: black;
+        
         .card_title{
             color: white;
         }
