--- a/modules/Sass_Tutorial/CSS/style.css
+++ b/modules/Sass_Tutorial/CSS/style.css
@@ -1,3 +1,41 @@
+.card {
+  background-color: white;
+  width: 20rem;
+  overflow: hidden;
+  margin: 2rem;
+  -webkit-box-shadow: 5px 5px 5px 5px #000;
+          box-shadow: 5px 5px 5px 5px #000;
+  border-radius: 0.5rem;
+}
+
+.card img {
+  height: 15rem;
+  background-size: cover;
+  background-position: center;
+}
+
+.card .card_content {
+  padding: 2rem;
+}
+
+.card .card_title {
+  margin: 0;
+  color: black;
+}
+
+.card .card_description {
+  margin: 0;
+  color: #999;
+}
+
+.card_dark {
+  background-color: black;
+}
+
+.card_dark .card_title {
+  color: white;
+}
+
 body {
   font-family: "Poppins", Helvertica, sans-serif;
   background-color: #ab99ca;
